Fix for #99, chart titles not centered

--- a/skins/Belchertown/style.css
+++ b/skins/Belchertown/style.css
@@ -2160,10 +2160,12 @@ table.celestial td.label {
   text-align: center;
 }
 
-/* span.highcharts-title { */
-/* width: 100% !important; */
-/* text-align: center !important; */
-/* } */
+span.highcharts-title {
+    left: 0 !important;
+    right: 0 !important;
+    width: 100% !important;
+    text-align: center !important;
+}
 
 .wx-buttons {
   margin: 0 auto;
